--- a/elblog.html
+++ b/elblog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>El súper blog</title>
+	<title>El súper blog 2.0</title>
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
